<resources>
    <string name="app_name">CartCrafter</string>
    <string name="login">Acceder</string>
    <string name="register">Registrarse</string>
    <string name="version">1.0.0.0</string>
    <string name="acceder">Acceder</string>
    <string name="email">Correo electrónico</string>
    <string name="userName">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="repeatPassword">Repetir contraseña</string>
    <string name ="login_ok">¡Sesión inicada!</string>
    <string name ="login_error">¡Datos incorrectos!</string>
    <string name ="password_error">¡Contraseña incorrecta!</string>
    <string name ="register_ok">¡Registro completado!</string>
    <string name ="register_error">¡No se puede registrar esa cuenta!</string>
    <string name ="password_dont_match">¡Las contraseñas no coinciden!</string>
    <string name ="password_strength_error">¡Contraseña insegura!</string>
    <string name ="myLists">Mis listas</string>
    <string name ="productSearch">Buscar productos</string>
    <string name ="logout">Cerrar sesión</string>
    <string name ="search">Buscar</string>
    <string name ="spects">Especificaciones</string>
    <string name ="weigtht_title">Peso: </string>
    <string name ="prices">Precios</string>
    <string name ="description">Descripción</string>
    <string name ="product">Producto</string>
    <string name ="reviews">Reseñas</string>
    <string name ="review">Reseña</string>
    <string name ="user">Usuario</string>
    <string name ="score">Puntuación</string>
    <string name ="score_title">Puntuación:</string>
    <string name ="totalScoreTitle">Valoración media: </string>
    <string name ="price_title">Precio: </string>
    <string name ="distance">Distancia: </string>
    <string name ="add_to_list_text">A la lista -> </string>
    <string name ="supermarket">Supermercado</string>
    <string name ="send">Enviar</string>
    <string name ="review_submit_success">Reseña enviada correctamente</string>
    <string name ="review_submit_failed">No se pudo enviar la reseña</string>
    <string name ="review_incompleted">Es necesario especificar un número de estrellas</string>
    <string name ="create">Crear</string>
    <string name ="optional_comment">Comentario (opcional)</string>
    <string name ="create_review">Crear reseña</string>
    <string name ="delete_review">Eliminar mi reseña</string>
    <string name ="review_delete_failed">No se pudo eliminar la reseña</string>
    <string name ="review_delete_success">Se eliminó la reseña</string>
    <string name ="num_products_title">Productos:</string>
    <string name ="weight_title">Peso:</string>
    <string name ="delete">Borrar</string>
    <string name ="edit">Editar</string>
    <string name ="use">Usar</string>
    <string name ="my_lists_title">Mis listas</string>
    <string name ="create_list">Crear lista</string>
</resources>