<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/logo_LoginActivity"
        android:layout_width="213dp"
        android:layout_height="195dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/icon" />

    <LinearLayout
        android:layout_width="279dp"
        android:layout_height="352dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_LoginActivity"
        app:layout_constraintVertical_bias="0.457">

        <EditText
            android:id="@+id/emailInput_LoginActivity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:cursorVisible="true"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/dark_grey"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey" />

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/passwordInput_LoginActivity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_grey"
            android:cursorVisible="true"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey" />

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/accessButton_LoginActivity"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:backgroundTint="#FF9800"
            android:padding="10sp"
            android:text="@string/acceder"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="login"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/registerButton_LoginActivity"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:backgroundTint="#FF9800"
            android:padding="10sp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="goToRegister"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>