<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/logo_MainActivity"
        android:layout_width="213dp"
        android:layout_height="195dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/icon" />

    <LinearLayout
        android:layout_width="279dp"
        android:layout_height="160dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_MainActivity"
        app:layout_constraintVertical_bias="0.353">

        <Button
            android:id="@+id/loginButton_MainActivity"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:backgroundTint="#FF9800"
            android:onClick="goToLogin"
            android:padding="10sp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/registerButton_MainActivity"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:backgroundTint="#FF9800"
            android:onClick="goToRegister"
            android:padding="10sp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textVersion"
        android:layout_width="167dp"
        android:layout_height="29dp"
        android:padding="5sp"
        android:text="@string/version"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>